# Arbor

./: AI_README.md  CONTRIBUTING.md  NIXOS_TOOL_COMPATIBILITY.md  README.md  README.zh-CN.md  RELEASING.md  mkdocs.yml  pyproject.toml  shell.nix
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  pages.yml
docs/: cli.md  cli.zh.md  configuration.md  configuration.zh.md  contributing.md  contributing.zh.md  how-it-works.md  index.md  index.zh.md  installation.md  installation.zh.md  interaction-modes.md  outputs-and-resume.md  plugins.md  plugins.zh.md  preparing-a-benchmark.md  preparing-a-benchmark.zh.md  quickstart.md  quickstart.zh.md  web-ui.md
examples/: kaggle_config.example.yaml  research_config.example.yaml
examples/algotune_knn/: .gitignore  README.md  research_config.yaml
examples/hello_benchmark/: README.md  eval.py
examples/magnonics_benchmark/: README.md  arbor.yaml  lab_intake.yaml
project_page/: README.md  package-lock.json  package.json
project_page/src/: i18n.jsx
scripts/: install.sh
simulation_project/: .gitignore  README.md  Snakefile  arbor_config.example.yaml  flake.nix
skills/: README.md
src/: _app.py  export.py  run.py
tests/: test_branch_guard.py  test_checkpoint.py  test_cli_app.py  test_config_schema.py  test_convergence_emit.py  test_demo_cmd.py  test_doctor_cmd.py  test_executor_io.py  test_executor_run_helpers.py  test_export.py  test_idea_tree.py  test_init_cmd.py  test_magnonics_evaluator.py  test_orchestrator_paths.py  test_pricing.py  test_resume_helpers.py  test_run_dashboard_helpers.py
(+73 files in other folders)
