[project]
name = "arbor"
version = "0.1.0"
description = "Arbor — an autonomous research agent that proposes ideas, edits code, runs experiments, and iterates on a hypothesis tree."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["ai", "agent", "autonomous-research", "llm", "experimentation"]
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.30.0",
    "litellm>=1.55.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]

[project.scripts]
arbor = "arbor.cli.app:main"
executor = "arbor.executor.main:cli"
coordinator = "arbor.coordinator.main:cli"
run-research = "arbor.run:cli"
review-research = "arbor.review:cli"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["arbor*"]

[tool.setuptools.package-data]
"arbor" = ["skills/*.md"]
"arbor.webui" = ["index.html"]
"arbor.plugins" = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
